--- a/_locales/he/messages.json
+++ b/_locales/he/messages.json
@@ -82,5 +82,11 @@
   },
   "chromeWebStore": {
     "message": "Chrome Web Store"
+  },
+  "copyLatexFormula": {
+    "message": "העתק נוסחת LaTeX"
+  },
+  "latexFormulaCopied": {
+    "message": "הועתק בהצלחה"
   }
 }
