--- a/_locales/hr/messages.json
+++ b/_locales/hr/messages.json
@@ -82,5 +82,11 @@
   },
   "chromeWebStore": {
     "message": "Chrome Web Store"
+  },
+  "copyLatexFormula": {
+    "message": "Kopiraj LaTeX formulu"
+  },
+  "latexFormulaCopied": {
+    "message": "Uspješno kopirano"
   }
 }
