--- a/_locales/it/messages.json
+++ b/_locales/it/messages.json
@@ -82,5 +82,11 @@
   },
   "chromeWebStore": {
     "message": "Chrome Web Store"
+  },
+  "copyLatexFormula": {
+    "message": "Copia formula LaTeX"
+  },
+  "latexFormulaCopied": {
+    "message": "Copiato con successo"
   }
 }
