--- a/_locales/ja/messages.json
+++ b/_locales/ja/messages.json
@@ -82,5 +82,11 @@
   },
   "chromeWebStore": {
     "message": "Chrome ウェブストア"
+  },
+  "copyLatexFormula": {
+    "message": "LaTeX 数式をコピー"
+  },
+  "latexFormulaCopied": {
+    "message": "コピーしました"
   }
 }
