--- a/_locales/kk/messages.json
+++ b/_locales/kk/messages.json
@@ -82,5 +82,11 @@
   },
   "chromeWebStore": {
     "message": "Chrome Web Store"
+  },
+  "copyLatexFormula": {
+    "message": "LaTeX формуласын көшіру"
+  },
+  "latexFormulaCopied": {
+    "message": "Сәтті көшірілді"
   }
 }
