--- a/_locales/lt/messages.json
+++ b/_locales/lt/messages.json
@@ -82,5 +82,11 @@
   },
   "chromeWebStore": {
     "message": "Chrome Web Store"
+  },
+  "copyLatexFormula": {
+    "message": "Kopijuoti LaTeX formulę"
+  },
+  "latexFormulaCopied": {
+    "message": "Sėkmingai nukopijuota"
   }
 }
