--- a/_locales/sr/messages.json
+++ b/_locales/sr/messages.json
@@ -82,5 +82,11 @@
   },
   "chromeWebStore": {
     "message": "Chrome Web Store"
+  },
+  "copyLatexFormula": {
+    "message": "Копирај LaTeX формулу"
+  },
+  "latexFormulaCopied": {
+    "message": "Успешно копирано"
   }
 }
