--- a/_locales/bn/messages.json
+++ b/_locales/bn/messages.json
@@ -82,5 +82,11 @@
   },
   "chromeWebStore": {
     "message": "Chrome Web Store"
+  },
+  "copyLatexFormula": {
+    "message": "LaTeX সূত্র কপি করুন"
+  },
+  "latexFormulaCopied": {
+    "message": "সফলভাবে কপি করা হয়েছে"
   }
 }
