--- a/_locales/cs/messages.json
+++ b/_locales/cs/messages.json
@@ -82,5 +82,11 @@
   },
   "chromeWebStore": {
     "message": "Chrome Web Store"
+  },
+  "copyLatexFormula": {
+    "message": "Kopírovat LaTeX vzorec"
+  },
+  "latexFormulaCopied": {
+    "message": "Úspěšně zkopírováno"
   }
 }
