--- a/_locales/da/messages.json
+++ b/_locales/da/messages.json
@@ -82,5 +82,11 @@
   },
   "chromeWebStore": {
     "message": "Chrome Web Store"
+  },
+  "copyLatexFormula": {
+    "message": "Kopier LaTeX-formel"
+  },
+  "latexFormulaCopied": {
+    "message": "Kopieret"
   }
 }
