--- a/_locales/fr_CA/messages.json
+++ b/_locales/fr_CA/messages.json
@@ -82,5 +82,11 @@
   },
   "chromeWebStore": {
     "message": "Chrome Web Store"
+  },
+  "copyLatexFormula": {
+    "message": "Copier la formule LaTeX"
+  },
+  "latexFormulaCopied": {
+    "message": "Copié avec succès"
   }
 }
