--- a/_locales/hu/messages.json
+++ b/_locales/hu/messages.json
@@ -82,5 +82,11 @@
   },
   "chromeWebStore": {
     "message": "Chrome Web Store"
+  },
+  "copyLatexFormula": {
+    "message": "LaTeX képlet másolása"
+  },
+  "latexFormulaCopied": {
+    "message": "Sikeresen másolva"
   }
 }
