--- a/_locales/lv/messages.json
+++ b/_locales/lv/messages.json
@@ -82,5 +82,11 @@
   },
   "chromeWebStore": {
     "message": "Chrome Web Store"
+  },
+  "copyLatexFormula": {
+    "message": "Kopēt LaTeX formulu"
+  },
+  "latexFormulaCopied": {
+    "message": "Veiksmīgi nokopēts"
   }
 }
