--- a/_locales/nl/messages.json
+++ b/_locales/nl/messages.json
@@ -82,5 +82,11 @@
   },
   "chromeWebStore": {
     "message": "Chrome Web Store"
+  },
+  "copyLatexFormula": {
+    "message": "LaTeX-formule kopiëren"
+  },
+  "latexFormulaCopied": {
+    "message": "Succesvol gekopieerd"
   }
 }
