--- a/_locales/ru/messages.json
+++ b/_locales/ru/messages.json
@@ -82,5 +82,11 @@
   },
   "chromeWebStore": {
     "message": "Chrome Web Store"
+  },
+  "copyLatexFormula": {
+    "message": "Копировать формулу LaTeX"
+  },
+  "latexFormulaCopied": {
+    "message": "Успешно скопировано"
   }
 }
