--- a/_locales/sk/messages.json
+++ b/_locales/sk/messages.json
@@ -82,5 +82,11 @@
   },
   "chromeWebStore": {
     "message": "Chrome Web Store"
+  },
+  "copyLatexFormula": {
+    "message": "Kopírovať LaTeX vzorec"
+  },
+  "latexFormulaCopied": {
+    "message": "Úspešne skopírované"
   }
 }
