--- a/_locales/sv/messages.json
+++ b/_locales/sv/messages.json
@@ -82,5 +82,11 @@
   },
   "chromeWebStore": {
     "message": "Chrome Web Store"
+  },
+  "copyLatexFormula": {
+    "message": "Kopiera LaTeX-formel"
+  },
+  "latexFormulaCopied": {
+    "message": "Kopierat"
   }
 }
