--- a/_locales/tr/messages.json
+++ b/_locales/tr/messages.json
@@ -82,5 +82,11 @@
   },
   "chromeWebStore": {
     "message": "Chrome Web Store"
+  },
+  "copyLatexFormula": {
+    "message": "LaTeX formülünü kopyala"
+  },
+  "latexFormulaCopied": {
+    "message": "Başarıyla kopyalandı"
   }
 }
