fix: 更新所有语言的扩展描述以符合Chrome商店132字符限制
- 保持中文简体和繁体使用长版本描述（67字符）
- 所有其他语言使用短版本描述（55-131字符）
- 所有语言的描述均符合132字符限制
- 重新打包 v3.5.0

--- a/_locales/az/messages.json
+++ b/_locales/az/messages.json
@@ -3,7 +3,7 @@
     "message": "AI Chat Timeline - ChatGPT, Gemini, DeepSeek üçün interaktiv zaman xətti"
   },
   "extDescription": {
-    "message": "Double your AI chat efficiency! With an interactive timeline, 🚀 easily jump to any conversation, 📌 long-press to mark important chats, ⭐️ bookmark chats and quickly copy LaTeX formulas."
+    "message": "AI üçün interaktiv xətt. Söhbətlərə keçin, əlfəcinləşdirin və LaTeX-i kopyalayın."
   },
   "viewStarred": {
     "message": "Sevimliləri göstər"
