--- a/_locales/bn/messages.json
+++ b/_locales/bn/messages.json
@@ -3,7 +3,7 @@
     "message": "AI Chat Timeline - ChatGPT, Gemini, DeepSeek এর জন্য ইন্টারেক্টিভ টাইমলাইন"
   },
   "extDescription": {
-    "message": "Double your AI chat efficiency! With an interactive timeline, 🚀 easily jump to any conversation, 📌 long-press to mark important chats, ⭐️ bookmark chats and quickly copy LaTeX formulas."
+    "message": "AI চ্যাটের জন্য ইন্টারঅ্যাক্টিভ টাইমলাইন। কথোপকথনে যান, গুরুত্বপূর্ণ চ্যাট বুকমার্ক করুন এবং LaTeX সূত্র সহজে কপি করুন।"
   },
   "viewStarred": {
     "message": "প্রিয় দেখুন"
