--- a/_locales/de/messages.json
+++ b/_locales/de/messages.json
@@ -3,7 +3,7 @@
     "message": "AI Chat Timeline - Interaktive Zeitleiste für ChatGPT, Gemini, DeepSeek"
   },
   "extDescription": {
-    "message": "Double your AI chat efficiency! With an interactive timeline, 🚀 easily jump to any conversation, 📌 long-press to mark important chats, ⭐️ bookmark chats and quickly copy LaTeX formulas."
+    "message": "Interaktive Zeitleiste für AI-Chats. Zu Konversationen springen, wichtige Chats markieren und LaTeX-Formeln einfach kopieren."
   },
   "viewStarred": {
     "message": "Favoriten anzeigen"
