--- a/_locales/el/messages.json
+++ b/_locales/el/messages.json
@@ -3,7 +3,7 @@
     "message": "AI Chat Timeline - Διαδραστικό χρονολόγιο για ChatGPT, Gemini, DeepSeek"
   },
   "extDescription": {
-    "message": "Double your AI chat efficiency! With an interactive timeline, 🚀 easily jump to any conversation, 📌 long-press to mark important chats, ⭐️ bookmark chats and quickly copy LaTeX formulas."
+    "message": "Διαδραστική χρονολογία AI. Μεταβείτε σε συνομιλίες, προσθέστε σημαντικές και αντιγράψτε LaTeX εύκολα."
   },
   "viewStarred": {
     "message": "Προβολή αγαπημένων"
