--- a/_locales/fil/messages.json
+++ b/_locales/fil/messages.json
@@ -3,7 +3,7 @@
     "message": "AI Chat Timeline - Interactive timeline para sa ChatGPT, Gemini, DeepSeek"
   },
   "extDescription": {
-    "message": "Double your AI chat efficiency! With an interactive timeline, 🚀 easily jump to any conversation, 📌 long-press to mark important chats, ⭐️ bookmark chats and quickly copy LaTeX formulas."
+    "message": "Interactive timeline para sa AI chats. Tumalon sa pag-uusap, i-bookmark at kopyahin ang LaTeX formulas."
   },
   "viewStarred": {
     "message": "Tingnan ang mga paborito"
