--- a/_locales/fr/messages.json
+++ b/_locales/fr/messages.json
@@ -3,7 +3,7 @@
     "message": "AI Chat Timeline - Timeline interactive pour ChatGPT, Gemini, DeepSeek etc."
   },
   "extDescription": {
-    "message": "Double your AI chat efficiency! With an interactive timeline, 🚀 easily jump to any conversation, 📌 long-press to mark important chats, ⭐️ bookmark chats and quickly copy LaTeX formulas."
+    "message": "Chronologie interactive pour IA. Passez aux conversations, marquez les chats et copiez les formules LaTeX."
   },
   "viewStarred": {
     "message": "Voir les favoris"
