--- a/_locales/he/messages.json
+++ b/_locales/he/messages.json
@@ -3,7 +3,7 @@
     "message": "AI Chat Timeline - ציר זמן אינטראקטיבי עבור ChatGPT, Gemini, DeepSeek"
   },
   "extDescription": {
-    "message": "Double your AI chat efficiency! With an interactive timeline, 🚀 easily jump to any conversation, 📌 long-press to mark important chats, ⭐️ bookmark chats and quickly copy LaTeX formulas."
+    "message": "ציר זמן אינטראקטיבי לצ'אטים של AI. קפצו לשיחות, סמנו צ'אטים חשובים והעתיקו נוסחאות LaTeX בקלות."
   },
   "viewStarred": {
     "message": "הצג מועדפים"
