--- a/_locales/hi/messages.json
+++ b/_locales/hi/messages.json
@@ -3,7 +3,7 @@
     "message": "AI Chat Timeline - ChatGPT, Gemini, DeepSeek के लिए इंटरैक्टिव टाइमलाइन"
   },
   "extDescription": {
-    "message": "Double your AI chat efficiency! With an interactive timeline, 🚀 easily jump to any conversation, 📌 long-press to mark important chats, ⭐️ bookmark chats and quickly copy LaTeX formulas."
+    "message": "AI चैट के लिए इंटरैक्टिव टाइमलाइन। बातचीत पर जाएं, महत्वपूर्ण चैट को बुकमार्क करें और LaTeX सूत्र आसानी से कॉपी करें।"
   },
   "viewStarred": {
     "message": "पसंदीदा देखें"
