--- a/_locales/hr/messages.json
+++ b/_locales/hr/messages.json
@@ -3,7 +3,7 @@
     "message": "AI Chat Timeline - Interaktivna vremenska linija za ChatGPT, Gemini"
   },
   "extDescription": {
-    "message": "Double your AI chat efficiency! With an interactive timeline, 🚀 easily jump to any conversation, 📌 long-press to mark important chats, ⭐️ bookmark chats and quickly copy LaTeX formulas."
+    "message": "Interaktivna vremenska traka za AI chatove. Skočite na razgovore, označite važne chatove i lako kopirajte LaTeX formule."
   },
   "viewStarred": {
     "message": "Pogledaj favorite"
