--- a/_locales/hu/messages.json
+++ b/_locales/hu/messages.json
@@ -3,7 +3,7 @@
     "message": "AI Chat Timeline - Interaktív idővonal ChatGPT, Gemini, DeepSeek stb.-hez"
   },
   "extDescription": {
-    "message": "Double your AI chat efficiency! With an interactive timeline, 🚀 easily jump to any conversation, 📌 long-press to mark important chats, ⭐️ bookmark chats and quickly copy LaTeX formulas."
+    "message": "Interaktív idővonal AI chatekhez. Ugorj beszélgetésekre, jelölj meg fontos chateket és könnyen másold ki a LaTeX képleteket."
   },
   "viewStarred": {
     "message": "Kedvencek megtekintése"
