--- a/_locales/hy/messages.json
+++ b/_locales/hy/messages.json
@@ -3,7 +3,7 @@
     "message": "AI Chat Timeline - Ինտերակտիվ ժամանակացույց ChatGPT, Gemini, DeepSeek համար"
   },
   "extDescription": {
-    "message": "Double your AI chat efficiency! With an interactive timeline, 🚀 easily jump to any conversation, 📌 long-press to mark important chats, ⭐️ bookmark chats and quickly copy LaTeX formulas."
+    "message": "Ինտերակտիվ ժամանակացույց AI զրույցների համար: Անցեք զրույցների, նշեք կարևոր զրույցները և հեշտությամբ պատճենեք LaTeX բանաձևերը:"
   },
   "viewStarred": {
     "message": "Դիտել ընտրանին"
