--- a/_locales/is/messages.json
+++ b/_locales/is/messages.json
@@ -3,7 +3,7 @@
     "message": "AI Chat Timeline - Gagnvirk tímalína fyrir ChatGPT, Gemini, DeepSeek o.fl."
   },
   "extDescription": {
-    "message": "Double your AI chat efficiency! With an interactive timeline, 🚀 easily jump to any conversation, 📌 long-press to mark important chats, ⭐️ bookmark chats and quickly copy LaTeX formulas."
+    "message": "Gagnvirk tímalína fyrir AI spjöll. Hoppaðu í samtöl, bókamerktu mikilvæg spjöll og afritaðu LaTeX formúlur auðveldlega."
   },
   "viewStarred": {
     "message": "Skoða eftirlæti"
