--- a/_locales/kk/messages.json
+++ b/_locales/kk/messages.json
@@ -3,7 +3,7 @@
     "message": "AI Chat Timeline - ChatGPT, Gemini, DeepSeek үшін интерактивті уақыт шкаласы"
   },
   "extDescription": {
-    "message": "Double your AI chat efficiency! With an interactive timeline, 🚀 easily jump to any conversation, 📌 long-press to mark important chats, ⭐️ bookmark chats and quickly copy LaTeX formulas."
+    "message": "AI чаттары үшін интерактивті уақыт желісі. Әңгімелерге өтіңіз, маңызды чаттарды белгілеңіз және LaTeX формулаларын оңай көшіріңіз."
   },
   "viewStarred": {
     "message": "Таңдаулыларды көру"
