--- a/_locales/lv/messages.json
+++ b/_locales/lv/messages.json
@@ -3,7 +3,7 @@
     "message": "AI Chat Timeline - Interaktīva laika skala ChatGPT, Gemini, DeepSeek u.c."
   },
   "extDescription": {
-    "message": "Double your AI chat efficiency! With an interactive timeline, 🚀 easily jump to any conversation, 📌 long-press to mark important chats, ⭐️ bookmark chats and quickly copy LaTeX formulas."
+    "message": "Interaktīva laika līnija AI. Pārejiet uz sarunām, pievienojiet grāmatzīmēs un kopējiet LaTeX formulas."
   },
   "viewStarred": {
     "message": "Skatīt izlasi"
