--- a/_locales/my/messages.json
+++ b/_locales/my/messages.json
@@ -3,7 +3,7 @@
     "message": "AI Chat Timeline - ChatGPT, Gemini, DeepSeek အတွက် အပြန်အလှန်အချိန်ဇယား"
   },
   "extDescription": {
-    "message": "Double your AI chat efficiency! With an interactive timeline, 🚀 easily jump to any conversation, 📌 long-press to mark important chats, ⭐️ bookmark chats and quickly copy LaTeX formulas."
+    "message": "AI စကားပြောခန်းများအတွက် timeline။ သွားပါ၊ bookmark လုပ်ပါ နှင့် LaTeX ကူးယူပါ။"
   },
   "viewStarred": {
     "message": "အကြိုက်ဆုံးများကြည့်ရန်"
