--- a/_locales/ne/messages.json
+++ b/_locales/ne/messages.json
@@ -3,7 +3,7 @@
     "message": "AI Chat Timeline - ChatGPT, Gemini को लागि अन्तरक्रियात्मक टाइमलाइन"
   },
   "extDescription": {
-    "message": "Double your AI chat efficiency! With an interactive timeline, 🚀 easily jump to any conversation, 📌 long-press to mark important chats, ⭐️ bookmark chats and quickly copy LaTeX formulas."
+    "message": "AI च्याटका लागि टाइमलाइन। कुराकानीमा जानुहोस्, बुकमार्क गर्नुहोस् र LaTeX सूत्रहरू प्रतिलिपि गर्नुहोस्।"
   },
   "viewStarred": {
     "message": "मनपर्ने हेर्नुहोस्"
