--- a/_locales/no/messages.json
+++ b/_locales/no/messages.json
@@ -3,7 +3,7 @@
     "message": "AI Chat Timeline - Interaktiv tidslinje for ChatGPT, Gemini, DeepSeek osv."
   },
   "extDescription": {
-    "message": "Double your AI chat efficiency! With an interactive timeline, 🚀 easily jump to any conversation, 📌 long-press to mark important chats, ⭐️ bookmark chats and quickly copy LaTeX formulas."
+    "message": "Interaktiv tidslinje for AI-chatter. Hopp til samtaler, bokmerk viktige chatter og kopier LaTeX-formler enkelt."
   },
   "viewStarred": {
     "message": "Vis favoritter"
