--- a/_locales/pl/messages.json
+++ b/_locales/pl/messages.json
@@ -3,7 +3,7 @@
     "message": "AI Chat Timeline - Interaktywna oś czasu dla ChatGPT, Gemini, DeepSeek itp."
   },
   "extDescription": {
-    "message": "Double your AI chat efficiency! With an interactive timeline, 🚀 easily jump to any conversation, 📌 long-press to mark important chats, ⭐️ bookmark chats and quickly copy LaTeX formulas."
+    "message": "Interaktywna oś czasu dla czatów AI. Przeskocz do rozmów, dodaj ważne czaty do zakładek i łatwo kopiuj formuły LaTeX."
   },
   "viewStarred": {
     "message": "Zobacz ulubione"
