--- a/_locales/ro/messages.json
+++ b/_locales/ro/messages.json
@@ -3,7 +3,7 @@
     "message": "AI Chat Timeline - Cronologie interactivă pentru ChatGPT, Gemini, DeepSeek"
   },
   "extDescription": {
-    "message": "Double your AI chat efficiency! With an interactive timeline, 🚀 easily jump to any conversation, 📌 long-press to mark important chats, ⭐️ bookmark chats and quickly copy LaTeX formulas."
+    "message": "Cronologie interactivă pentru AI. Săriți la conversații, marcați chat-uri și copiați formule LaTeX."
   },
   "viewStarred": {
     "message": "Vezi favoritele"
