--- a/_locales/si/messages.json
+++ b/_locales/si/messages.json
@@ -3,7 +3,7 @@
     "message": "AI Chat Timeline - ChatGPT, Gemini සඳහා අන්තර්ක්‍රියාකාරී කාල රේඛාව"
   },
   "extDescription": {
-    "message": "Double your AI chat efficiency! With an interactive timeline, 🚀 easily jump to any conversation, 📌 long-press to mark important chats, ⭐️ bookmark chats and quickly copy LaTeX formulas."
+    "message": "AI චැට් සඳහා අන්තර්ක්‍රියාකාරී කාලරාමුව. සංවාද වෙත පනින්න, වැදගත් චැට් පිටු සලකුණු කරන්න සහ LaTeX සූත්‍ර පහසුවෙන් පිටපත් කරන්න."
   },
   "viewStarred": {
     "message": "ප්‍රියතම බලන්න"
