--- a/_locales/sk/messages.json
+++ b/_locales/sk/messages.json
@@ -3,7 +3,7 @@
     "message": "AI Chat Timeline - Interaktívna časová os pre ChatGPT, Gemini, DeepSeek"
   },
   "extDescription": {
-    "message": "Double your AI chat efficiency! With an interactive timeline, 🚀 easily jump to any conversation, 📌 long-press to mark important chats, ⭐️ bookmark chats and quickly copy LaTeX formulas."
+    "message": "Interaktívna časová os pre AI chaty. Preskočte na konverzácie, označte dôležité chaty a jednoducho kopírujte LaTeX vzorce."
   },
   "viewStarred": {
     "message": "Zobraziť obľúbené"
