--- a/_locales/sr/messages.json
+++ b/_locales/sr/messages.json
@@ -3,7 +3,7 @@
     "message": "AI Chat Timeline - Интерактивна временска линија за ChatGPT, Gemini"
   },
   "extDescription": {
-    "message": "Double your AI chat efficiency! With an interactive timeline, 🚀 easily jump to any conversation, 📌 long-press to mark important chats, ⭐️ bookmark chats and quickly copy LaTeX formulas."
+    "message": "Interaktivna vremenska linija za AI četove. Skočite na razgovore, označite važne četove i lako kopirajte LaTeX formule."
   },
   "viewStarred": {
     "message": "Погледај омиљене"
