--- a/_locales/th/messages.json
+++ b/_locales/th/messages.json
@@ -3,7 +3,7 @@
     "message": "AI Chat Timeline - ไทม์ไลน์แบบโต้ตอบสำหรับ ChatGPT, Gemini, DeepSeek ฯลฯ"
   },
   "extDescription": {
-    "message": "Double your AI chat efficiency! With an interactive timeline, 🚀 easily jump to any conversation, 📌 long-press to mark important chats, ⭐️ bookmark chats and quickly copy LaTeX formulas."
+    "message": "ไทม์ไลน์แบบโต้ตอบสำหรับการแชท AI ข้ามไปยังการสนทนา คั่นหน้าแชทสำคัญ และคัดลอกสูตร LaTeX ได้อย่างง่ายดาย"
   },
   "viewStarred": {
     "message": "ดูรายการโปรด"
