--- a/_locales/tr/messages.json
+++ b/_locales/tr/messages.json
@@ -3,7 +3,7 @@
     "message": "AI Chat Timeline - ChatGPT, Gemini için etkileşimli zaman çizelgesi"
   },
   "extDescription": {
-    "message": "Double your AI chat efficiency! With an interactive timeline, 🚀 easily jump to any conversation, 📌 long-press to mark important chats, ⭐️ bookmark chats and quickly copy LaTeX formulas."
+    "message": "AI için etkileşimli zaman çizelgesi. Konuşmalara atlayın, işaretleyin ve LaTeX kopyalayın."
   },
   "viewStarred": {
     "message": "Favorileri görüntüle"
