--- a/_locales/uk/messages.json
+++ b/_locales/uk/messages.json
@@ -3,7 +3,7 @@
     "message": "AI Chat Timeline - Інтерактивна хронологія для ChatGPT, Gemini, DeepSeek"
   },
   "extDescription": {
-    "message": "Double your AI chat efficiency! With an interactive timeline, 🚀 easily jump to any conversation, 📌 long-press to mark important chats, ⭐️ bookmark chats and quickly copy LaTeX formulas."
+    "message": "Інтерактивна часова шкала для AI-чатів. Переходьте до розмов, додавайте важливі чати до закладок та легко копіюйте формули LaTeX."
   },
   "viewStarred": {
     "message": "Переглянути вибране"
