--- a/_locales/vi/messages.json
+++ b/_locales/vi/messages.json
@@ -3,7 +3,7 @@
     "message": "AI Chat Timeline - Dòng thời gian tương tác cho ChatGPT, Gemini, DeepSeek"
   },
   "extDescription": {
-    "message": "Double your AI chat efficiency! With an interactive timeline, 🚀 easily jump to any conversation, 📌 long-press to mark important chats, ⭐️ bookmark chats and quickly copy LaTeX formulas."
+    "message": "Dòng thời gian cho AI chats. Chuyển đến cuộc trò chuyện, đánh dấu và sao chép LaTeX dễ dàng."
   },
   "viewStarred": {
     "message": "Xem yêu thích"
