--- a/_locales/zh_TW/messages.json
+++ b/_locales/zh_TW/messages.json
@@ -3,7 +3,7 @@
     "message": "AI Chat Timeline - 為 AI 對話添加互動式時間軸，支援 ChatGPT、Gemini、DeepSeek 等平台"
   },
   "extDescription": {
-    "message": "让你使用 AI 聊天的效率翻倍！通过交互式时间轴，🚀轻松跳转至任意对话，📌长按标记重要对话，⭐️收藏聊天、快捷复制 LaTeX 公式。"
+    "message": "讓你使用 AI 聊天的效率翻倍！通過交互式時間軸，🚀輕鬆跳轉至任意對話，📌長按標記重要對話，⭐️收藏聊天，❤️複製 LaTeX 公式。"
   },
   "viewStarred": {
     "message": "檢視收藏"
