--- a/_locales/ar/messages.json
+++ b/_locales/ar/messages.json
@@ -3,7 +3,7 @@
     "message": "AI Chat Timeline - خط زمني تفاعلي لـ ChatGPT، Gemini، DeepSeek"
   },
   "extDescription": {
-    "message": "Double your AI chat efficiency! With an interactive timeline, 🚀 easily jump to any conversation, 📌 long-press to mark important chats, ⭐️ bookmark chats and quickly copy LaTeX formulas."
+    "message": "جدول زمني تفاعلي للدردشات مع الذكاء الاصطناعي. انتقل إلى المحادثات، احفظ الدردشات المهمة، وانسخ صيغ LaTeX بسهولة."
   },
   "viewStarred": {
     "message": "عرض المفضلة"
