--- a/_locales/bg/messages.json
+++ b/_locales/bg/messages.json
@@ -3,7 +3,7 @@
     "message": "AI Chat Timeline - Интерактивна времева линия за ChatGPT, Gemini, DeepSeek"
   },
   "extDescription": {
-    "message": "Double your AI chat efficiency! With an interactive timeline, 🚀 easily jump to any conversation, 📌 long-press to mark important chats, ⭐️ bookmark chats and quickly copy LaTeX formulas."
+    "message": "Интерактивна времева линия за AI чатове. Преминете към разговори, отбележете важни чатове и копирайте LaTeX формули с лекота."
   },
   "viewStarred": {
     "message": "Преглед на любими"
