--- a/_locales/cs/messages.json
+++ b/_locales/cs/messages.json
@@ -3,7 +3,7 @@
     "message": "AI Chat Timeline - Interaktivní časová osa pro ChatGPT, Gemini, DeepSeek"
   },
   "extDescription": {
-    "message": "Double your AI chat efficiency! With an interactive timeline, 🚀 easily jump to any conversation, 📌 long-press to mark important chats, ⭐️ bookmark chats and quickly copy LaTeX formulas."
+    "message": "Interaktivní časová osa pro AI chaty. Přeskakujte na konverzace, označujte důležité chaty a snadno kopírujte LaTeX vzorce."
   },
   "viewStarred": {
     "message": "Zobrazit oblíbené"
