--- a/_locales/da/messages.json
+++ b/_locales/da/messages.json
@@ -3,7 +3,7 @@
     "message": "AI Chat Timeline - Interaktiv tidslinje til ChatGPT, Gemini, DeepSeek osv."
   },
   "extDescription": {
-    "message": "Double your AI chat efficiency! With an interactive timeline, 🚀 easily jump to any conversation, 📌 long-press to mark important chats, ⭐️ bookmark chats and quickly copy LaTeX formulas."
+    "message": "Interaktiv tidslinje til AI-chats. Spring til samtaler, bogmærk vigtige chats og kopier LaTeX-formler med lethed."
   },
   "viewStarred": {
     "message": "Vis favoritter"
