--- a/_locales/es/messages.json
+++ b/_locales/es/messages.json
@@ -3,7 +3,7 @@
     "message": "AI Chat Timeline - Línea de tiempo interactiva para ChatGPT, Gemini"
   },
   "extDescription": {
-    "message": "Double your AI chat efficiency! With an interactive timeline, 🚀 easily jump to any conversation, 📌 long-press to mark important chats, ⭐️ bookmark chats and quickly copy LaTeX formulas."
+    "message": "Línea de tiempo interactiva para chats de IA. Salta a conversaciones, marca chats importantes y copia fórmulas LaTeX con facilidad."
   },
   "viewStarred": {
     "message": "Ver favoritos"
