--- a/_locales/fi/messages.json
+++ b/_locales/fi/messages.json
@@ -3,7 +3,7 @@
     "message": "AI Chat Timeline - Interaktiivinen aikajana ChatGPT, Gemini, DeepSeek jne."
   },
   "extDescription": {
-    "message": "Double your AI chat efficiency! With an interactive timeline, 🚀 easily jump to any conversation, 📌 long-press to mark important chats, ⭐️ bookmark chats and quickly copy LaTeX formulas."
+    "message": "Interaktiivinen aikajana AI-keskusteluille. Hyppää keskusteluihin, kirjanmerkit ja kopioi LaTeX."
   },
   "viewStarred": {
     "message": "Näytä suosikit"
