--- a/_locales/id/messages.json
+++ b/_locales/id/messages.json
@@ -3,7 +3,7 @@
     "message": "AI Chat Timeline - Garis waktu interaktif untuk ChatGPT, Gemini, DeepSeek"
   },
   "extDescription": {
-    "message": "Double your AI chat efficiency! With an interactive timeline, 🚀 easily jump to any conversation, 📌 long-press to mark important chats, ⭐️ bookmark chats and quickly copy LaTeX formulas."
+    "message": "Timeline interaktif untuk obrolan AI. Lompat ke percakapan, tandai obrolan penting, dan salin formula LaTeX dengan mudah."
   },
   "viewStarred": {
     "message": "Lihat favorit"
