--- a/_locales/it/messages.json
+++ b/_locales/it/messages.json
@@ -3,7 +3,7 @@
     "message": "AI Chat Timeline - Timeline interattiva per ChatGPT, Gemini, DeepSeek ecc."
   },
   "extDescription": {
-    "message": "Double your AI chat efficiency! With an interactive timeline, 🚀 easily jump to any conversation, 📌 long-press to mark important chats, ⭐️ bookmark chats and quickly copy LaTeX formulas."
+    "message": "Timeline interattiva per AI. Salta alle conversazioni, aggiungi ai segnalibri e copia formule LaTeX."
   },
   "viewStarred": {
     "message": "Visualizza preferiti"
