--- a/_locales/ka/messages.json
+++ b/_locales/ka/messages.json
@@ -3,7 +3,7 @@
     "message": "AI Chat Timeline - ინტერაქტიული დროის ხაზი ChatGPT, Gemini, DeepSeek-სთვის"
   },
   "extDescription": {
-    "message": "Double your AI chat efficiency! With an interactive timeline, 🚀 easily jump to any conversation, 📌 long-press to mark important chats, ⭐️ bookmark chats and quickly copy LaTeX formulas."
+    "message": "ინტერაქტიული ხაზი AI-სთვის. გადახვიდეთ საუბრებზე, დაამატეთ სანიშნეებში და დააკოპირეთ LaTeX."
   },
   "viewStarred": {
     "message": "ფავორიტების ნახვა"
