--- a/_locales/km/messages.json
+++ b/_locales/km/messages.json
@@ -3,7 +3,7 @@
     "message": "AI Chat Timeline - បន្ទាត់ពេលវេលាអន្តរកម្មសម្រាប់ ChatGPT, Gemini, DeepSeek"
   },
   "extDescription": {
-    "message": "Double your AI chat efficiency! With an interactive timeline, 🚀 easily jump to any conversation, 📌 long-press to mark important chats, ⭐️ bookmark chats and quickly copy LaTeX formulas."
+    "message": "បន្ទាត់ពេលអន្តរកម្មសម្រាប់ការជជែកតាម AI។ លោតទៅកាន់ការសន្ទនា, សម្គាល់ការជជែកសំខាន់ៗ និងចម្លងរូបមន្ត LaTeX យ៉ាងងាយស្រួល។"
   },
   "viewStarred": {
     "message": "មើលចំណូលចិត្ត"
