--- a/_locales/lt/messages.json
+++ b/_locales/lt/messages.json
@@ -3,7 +3,7 @@
     "message": "AI Chat Timeline - Interaktyvi laiko juosta ChatGPT, Gemini, DeepSeek"
   },
   "extDescription": {
-    "message": "Double your AI chat efficiency! With an interactive timeline, 🚀 easily jump to any conversation, 📌 long-press to mark important chats, ⭐️ bookmark chats and quickly copy LaTeX formulas."
+    "message": "Interaktyvi linija AI pokalbių. Pereikite prie pokalbių, pažymėkite ir kopijuokite LaTeX."
   },
   "viewStarred": {
     "message": "Peržiūrėti mėgstamiausius"
