--- a/_locales/ms/messages.json
+++ b/_locales/ms/messages.json
@@ -3,7 +3,7 @@
     "message": "AI Chat Timeline - Garis masa interaktif untuk ChatGPT, Gemini, DeepSeek"
   },
   "extDescription": {
-    "message": "Double your AI chat efficiency! With an interactive timeline, 🚀 easily jump to any conversation, 📌 long-press to mark important chats, ⭐️ bookmark chats and quickly copy LaTeX formulas."
+    "message": "Garis masa interaktif untuk sembang AI. Lompat ke perbualan, tanda buku sembang penting dan salin formula LaTeX dengan mudah."
   },
   "viewStarred": {
     "message": "Lihat kegemaran"
