--- a/_locales/nl/messages.json
+++ b/_locales/nl/messages.json
@@ -3,7 +3,7 @@
     "message": "AI Chat Timeline - Interactieve tijdlijn voor ChatGPT, Gemini, DeepSeek"
   },
   "extDescription": {
-    "message": "Double your AI chat efficiency! With an interactive timeline, 🚀 easily jump to any conversation, 📌 long-press to mark important chats, ⭐️ bookmark chats and quickly copy LaTeX formulas."
+    "message": "Interactieve tijdlijn voor AI-chats. Spring naar gesprekken, markeer belangrijke chats en kopieer eenvoudig LaTeX-formules."
   },
   "viewStarred": {
     "message": "Favorieten bekijken"
