--- a/_locales/pt_BR/messages.json
+++ b/_locales/pt_BR/messages.json
@@ -3,7 +3,7 @@
     "message": "AI Chat Timeline - Linha do tempo interativa para ChatGPT, Gemini, DeepSeek"
   },
   "extDescription": {
-    "message": "Double your AI chat efficiency! With an interactive timeline, 🚀 easily jump to any conversation, 📌 long-press to mark important chats, ⭐️ bookmark chats and quickly copy LaTeX formulas."
+    "message": "Linha do tempo interativa para chats de IA. Pule para conversas, marque chats importantes e copie fórmulas LaTeX com facilidade."
   },
   "viewStarred": {
     "message": "Ver favoritos"
