--- a/_locales/sv/messages.json
+++ b/_locales/sv/messages.json
@@ -3,7 +3,7 @@
     "message": "AI Chat Timeline - Interaktiv tidslinje för ChatGPT, Gemini, DeepSeek m.fl."
   },
   "extDescription": {
-    "message": "Double your AI chat efficiency! With an interactive timeline, 🚀 easily jump to any conversation, 📌 long-press to mark important chats, ⭐️ bookmark chats and quickly copy LaTeX formulas."
+    "message": "Interaktiv tidslinje för AI-chattar. Hoppa till konversationer, bokmärk viktiga chattar och kopiera LaTeX-formler enkelt."
   },
   "viewStarred": {
     "message": "Visa favoriter"
